--- a/index.html
+++ b/index.html
@@ -1,28 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/public/splash-screen.css">
+    <link rel="stylesheet" href="/public/splash-screen.css" />
     <title>Provider Dashboard</title>
   </head>
-  <body class="page-loading">
-
+  <body
+    class="page-loading app-dark-sidebar"
+    id="mz_app_body"
+    data-mz-app-layout="dark-sidebar"
+    data-mz-app-toolbar-enabled="true"
+    data-mz-app-sidebar-enabled="true"
+    data-mz-app-sidebar-fixed="true"
+    data-mz-app-sidebar-hoverable="true"
+    data-mz-app-sidebar-push-header="true"
+    data-mz-app-sidebar-push-toolbar="true"
+    data-mz-app-sidebar-push-footer="true"
+    data-mz-app-sidebar-panel-fixed="false"
+    data-mz-app-header-fixed="true"
+    data-mz-app-header-minimize="on"
+    cz-shortcut-listen="true"
+  >
     <!--begin::Theme mode setup on page load-->
     <script>
       let themeMode = "system";
 
       if (localStorage.getItem("kt_theme_mode_value")) {
-          themeMode = localStorage.getItem("kt_theme_mode_value");
+        themeMode = localStorage.getItem("kt_theme_mode_value");
       }
 
       if (themeMode === "system") {
-          themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
+        themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches
+          ? "dark"
+          : "light";
       }
 
       document.documentElement.setAttribute("data-bs-theme", themeMode);
-  </script>
+    </script>
     <!--end::Theme mode setup on page load-->
 
     <div id="app"></div>
