--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Provider Dashboard</title>
   </head>
   <body
-    class="page-loading app-dark-sidebar"
+    class="app-dark-sidebar"
     id="mz_app_body"
     data-mz-app-layout="dark-sidebar"
     data-mz-app-toolbar-enabled="true"
